[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_xla_cpu_plugin"
version = "0.0.1"
authors = [
    {name = "PyTorch/XLA Dev Team'", email = "pytorch-xla@googlegroups.com"},
]
description = "CPU PJRT Plugin for testing only"
requires-python = ">=3.8"

[tool.setuptools.package-data]
torch_xla_cpu_plugin = ["lib/*.so"]

[project.entry-points."torch_xla.plugins"]
example = "torch_xla_cpu_plugin:CpuPlugin"
